--- a/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_main.xml
+++ b/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_main.xml
@@ -5,153 +5,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.proiect.licenta.MainActivity"
-    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp"
-    android:background="#cc232F34">
+    android:background="@color/backgroundfragment">
 
     <Button
         android:id="@+id/btnSelect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="35dp"
         android:text="Afiseaza orar"
-        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="200dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/mychoiceSemigrupa"
+        android:layout_marginBottom="141dp"
+        android:layout_marginRight="39dp" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/alegereSemigrupa"
+    <EditText
+        android:id="@+id/mychoiceSemigrupa"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="150dp"
-        android:layout_marginStart="10dp"
-        android:textColor="#F5F5F5"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="#F5F5F5"
-        app:layout_constraintBottom_toBottomOf="@+id/btnSelect"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="35dp"
+        android:layout_weight="1"
+        android:background="@drawable/round_edit_text"
+        android:hint="  Semigrupa:"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:textColorLink="@android:color/white"
+        app:layout_constraintLeft_toLeftOf="@+id/mychoiceGrupa"
+        app:layout_constraintRight_toRightOf="@+id/mychoiceGrupa"
+        app:layout_constraintTop_toBottomOf="@+id/mychoiceGrupa"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:focusableInTouchMode="false"/>
 
-        <EditText
-            android:id="@+id/mychoiceSemigrupa"
-            android:layout_width="210dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textInputLayout"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_edit_text"
-            android:hint="Semigrupa:"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:textColorLink="@android:color/white" />
-    </android.support.design.widget.TextInputLayout>
-
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/alegereSerie"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginStart="10dp"
-        android:textColor="#F5F5F5"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="#F5F5F5"
-        app:layout_constraintBottom_toBottomOf="@+id/btnSelect"
-        app:layout_constraintHorizontal_bias="0.018"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
+    <EditText
+        android:id="@+id/mychoiceSerie"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:background="@drawable/round_edit_text"
+        android:hint="  Serie:"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="#F6F6F6"
+        android:textColorLink="#F6F6F6"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/mychoiceAn"
+        app:layout_constraintRight_toRightOf="@+id/mychoiceAn"
+        app:layout_constraintTop_toBottomOf="@+id/mychoiceAn"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:focusableInTouchMode="false"/>
 
-        <EditText
-            android:id="@+id/mychoiceSerie"
-            android:layout_width="210dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textInputLayout"
-            android:layout_marginTop="100dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_edit_text"
-            android:hint="Serie:"
-            android:textColor="@android:color/background_dark"
-            android:textColorHint="#F6F6F6"
-            android:textColorLink="#F6F6F6" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/alegereGrupa"
+    <EditText
+        android:id="@+id/mychoiceGrupa"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginStart="10dp"
-        android:textColor="#F5F5F5"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="#F5F5F5"
-        app:layout_constraintBottom_toBottomOf="@+id/btnSelect"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="33dp"
+        android:layout_weight="1"
+        android:background="@drawable/round_edit_text"
+        android:hint="  Grupa:"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:textColorLink="@android:color/white"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/mychoiceSerie"
+        app:layout_constraintRight_toRightOf="@+id/mychoiceSerie"
+        app:layout_constraintTop_toBottomOf="@+id/mychoiceSerie"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        android:focusableInTouchMode="false"/>
 
-        <EditText
-            android:id="@+id/mychoiceGrupa"
-            android:layout_width="210dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textInputLayout"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_edit_text"
-            android:hint="Grupa:"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:textColorLink="@android:color/white" />
-    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/alegereAn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="150dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginStart="10dp"
-        android:textColor="#F5F5F5"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="#F5F5F5"
-        app:layout_constraintBottom_toBottomOf="@+id/btnSelect"
-        app:layout_constraintHorizontal_bias="0.19"
+    <EditText
+        android:id="@+id/mychoiceAn"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="92dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="105dp"
+        android:layout_weight="1"
+        android:background="@drawable/round_edit_text"
+        android:hint="  An:"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:textColorLink="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
-
-        <EditText
-            android:id="@+id/mychoiceAn"
-            android:layout_width="210dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/textInputLayout"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_edit_text"
-            android:hint="An:"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:textColorLink="@android:color/white" />
-    </android.support.design.widget.TextInputLayout>
+        tools:layout_constraintTop_creator="1"
+        android:focusableInTouchMode="false"/>
 
 </android.support.constraint.ConstraintLayout>
