--- a/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_timetable.xml
+++ b/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_timetable.xml
@@ -25,7 +25,8 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable" />
+            app:tabMode="scrollable"
+            app:tabIndicatorColor="@color/colorAccent"/>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
