--- a/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/friday_frag.xml
+++ b/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/friday_frag.xml
@@ -3,7 +3,7 @@
     android:id="@+id/recyclerViewFriday"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/backgroundfragment"
     android:clipToPadding="false"
     android:orientation="vertical"
     android:padding="16dp" />
