--- a/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_main.xml
+++ b/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_marginTop="20dp"
         android:layout_weight="1"
         android:background="@drawable/round_edit_text"
-        android:hint="  Serie:"
+        android:hint="  Serie"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="#F6F6F6"
@@ -73,7 +73,7 @@
         android:layout_marginTop="33dp"
         android:layout_weight="1"
         android:background="@drawable/round_edit_text"
-        android:hint="  Grupa:"
+        android:hint="  Grupa"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -93,17 +93,20 @@
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="92dp"
-        android:layout_marginStart="81dp"
         android:layout_marginTop="105dp"
+
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+
         android:layout_weight="1"
         android:background="@drawable/round_edit_text"
-        android:hint="  An:"
+        android:hint="  An"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         android:textColorLink="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
