--- a/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_start.xml
+++ b/Android Application/Licenta/Licenta/Licenta/app/src/main/res/layout/activity_start.xml
@@ -8,19 +8,23 @@
     tools:context="com.example.proiect.licenta.StartActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="501dp"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="5dp">
 
         <ImageView
             android:id="@+id/imageLogo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="239dp"
+            android:layout_height="212dp"
             android:layout_gravity="center"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/textLogo"
@@ -32,7 +36,7 @@
             android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="bold" />
-        
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
